deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-web
  template:
    spec:
      containers:
        - name: springboot-web
          image: 1223yys/springboot-web
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 256Mi
          livenessProbe:
            httpGet:
              port: 8080
              path: /api
            initialDelaySeconds: 20
          readinessProbe:
            httpGet:
              port: 8080
              path: /api
            initialDelaySeconds: 20
